Add close all windows on exit and fix multiple minor bugs